Добавлен вывод узлов и результата

--- a/Gauss_quadrature.ipynb
+++ b/Gauss_quadrature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#calculate the coefficients for nodes = 4\n",
+    "#calculate the coefficients for nodes = 2\n",
     "coef2 = np.array([])\n",
     "coef2 = np.append(coef2,(a[1]-x_2[1]*a[0])/(x_2[0]-x_2[1]))\n",
     "coef2 = np.append(coef2,(a[1]-x_2[0]*a[0])/(x_2[1]-x_2[0]))"
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -110,15 +110,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.02186433  0.51423056]\n",
+      "[ 0.0546108  0.36902  ] \n",
+      "[ 0.0157687  0.136333   0.316154   0.460793 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#nodes for n=2 and n=4\n",
+    "print x_2,\"\\n\",x_4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.02186433  0.51423056] \n",
       "[ 0.58646841  0.474143    0.32786766  0.14761582]\n"
      ]
     }
    ],
    "source": [
-    "#results\n",
-    "print coef2\n",
-    "print coef4"
+    "#coefficients\n",
+    "print coef2,\"\\n\",coef4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.49995415177 \n",
+      "1.49997641317\n"
+     ]
+    }
+   ],
+   "source": [
+    "#results for n=2 and n=4\n",
+    "result2 = np.sum(coef2*np.cos(x_2))\n",
+    "result4 = np.sum(coef4*np.cos(x_4))\n",
+    "print result2,\"\\n\",result4"
    ]
   }
  ],
